Moved the wsdl xmls to another folder. Modified the WebmasterApi accordingly